--- a/drivers/net/wireless/aicsemi/aic8800/usb/fdrv/Makefile
+++ b/drivers/net/wireless/aicsemi/aic8800/usb/fdrv/Makefile
@@ -113,8 +113,8 @@ CONFIG_PER_STA_FC = n
 CONFIG_PREALLOC_RX_SKB ?= n
 CONFIG_PREALLOC_TXQ ?= y
 CONFIG_USE_WIRELESS_EXT = y
-CONFIG_DPD = y
-CONFIG_FORCE_DPD_CALIB = y
+CONFIG_DPD = n
+CONFIG_FORCE_DPD_CALIB = n
 CONFIG_GKI = n
 CONFIG_SCHED_SCAN = n
 CONFIG_TEMP_COMP = n
